--- a/config/database.yml
+++ b/config/database.yml
@@ -1,15 +1,15 @@
-#default: &default
-#  adapter: postgresql
-#  encoding: unicode
-#  host: db
-#  username: postgres
-#  password:
-#  pool: 5
-
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
+  host: db
+  username: postgres
+  password:
   pool: 5
-  timeout: 5000
+
+#default: &default
+#  adapter: sqlite3
+#  pool: 5
+#  timeout: 5000
 
 development:
   <<: *default
